Web Inspector: Node sidebar panel: long attribute name is cut off without visual hint https://bugs.webkit.org/show_bug.cgi?id=258274 rdar://110999382
Reviewed by Patrick Angle and Devin Rousso.

Use `text-overflow: ellipsis` to indicate when DataGrid input content is visually cut off.

* Source/WebInspectorUI/UserInterface/Views/DataGrid.css:
(.data-grid tr.editable .cell-content > input):

Canonical link: https://commits.webkit.org/272135@main

--- a/Source/WebInspectorUI/UserInterface/Views/DataGrid.css
+++ b/Source/WebInspectorUI/UserInterface/Views/DataGrid.css
@@ -365,6 +365,7 @@ body[dir=rtl] .data-grid .resizer {
     background: none;
     border: none;
     outline: none;
+    text-overflow: ellipsis;
 }
 
 body:not(.window-inactive, .window-docked-inactive) .data-grid:focus tr.editable.selected .cell-content > input {
